--- a/config.yaml
+++ b/config.yaml
@@ -4,9 +4,10 @@ units: units.tsv
 ref:
   name: GRCh38.86
   # Path to the reference genome, ideally as it is provided by the GATK bundle.
-  genome: data/ref/genome.chr21.fa
+  # genome: data/ref/genome.chr21.fa
+  genome: data/ref/chr07.fa
   # Path to any database of known variants, ideally as it is provided by the GATK bundle.
-  known-variants: data/ref/dbsnp.vcf.gz
+  known-variants: data/ref/known-snps/3kfilt_Chr7-pos-only.vcf.gz
 
 filtering:
   # Set to true in order to apply machine learning based recalibration of
